crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE b_star (\n\tb \t\t\ttext\n) INHERITS (a_star);"
---
CreateStmt@0..53
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "b_star"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  Newline@21..22 "\n"
  Newline@22..23 "\t"
  ColumnDef@23..32
    Ident@23..24 "b"
    Whitespace@24..25 " "
    Newline@25..28 "\t\t\t"
    TypeName@28..32
      TextP@28..32 "text"
  Newline@32..33 "\n"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Inherits@35..43 "INHERITS"
  Whitespace@43..44 " "
  Ascii40@44..45 "("
  RangeVar@45..51
    Ident@45..51 "a_star"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

