crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, a, c, d)\n   VALUES ('d', 10, 'hi kristin'::name, '10.01'::float8);"
---
InsertStmt@0..93
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "c"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..34
    Ident@33..34 "d"
  Ascii41@34..35 ")"
  Newline@35..36 "\n"
  Whitespace@36..39 "   "
  SelectStmt@39..91
    Values@39..45 "VALUES"
    Whitespace@45..46 " "
    Ascii40@46..47 "("
    List@47..91
      AConst@47..50
        Sconst@47..50 "'d'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..54
        Iconst@52..54 "10"
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      TypeCast@56..74
        AConst@56..68
          Sconst@56..68 "'hi kristin'"
        Typecast@68..70 "::"
        TypeName@70..74
          NameP@70..74 "name"
      Ascii44@74..75 ","
      Whitespace@75..76 " "
      TypeCast@76..91
        AConst@76..83
          Sconst@76..83 "'10.01'"
        Typecast@83..85 "::"
        TypeName@85..91
          Ident@85..91 "float8"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

