crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, b, c, d)\n   VALUES ('d', 'crumble'::text, 'hi boris'::name, '100.001'::float8);"
---
InsertStmt@0..106
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "b"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "c"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..34
    Ident@33..34 "d"
  Ascii41@34..35 ")"
  Newline@35..36 "\n"
  Whitespace@36..39 "   "
  SelectStmt@39..104
    Values@39..45 "VALUES"
    Whitespace@45..46 " "
    Ascii40@46..47 "("
    List@47..104
      AConst@47..50
        Sconst@47..50 "'d'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      TypeCast@52..67
        AConst@52..61
          Sconst@52..61 "'crumble'"
        Typecast@61..63 "::"
        TypeName@63..67
          TextP@63..67 "text"
      Ascii44@67..68 ","
      Whitespace@68..69 " "
      TypeCast@69..85
        AConst@69..79
          Sconst@69..79 "'hi boris'"
        Typecast@79..81 "::"
        TypeName@81..85
          NameP@81..85 "name"
      Ascii44@85..86 ","
      Whitespace@86..87 " "
      TypeCast@87..104
        AConst@87..96
          Sconst@87..96 "'100.001'"
        Typecast@96..98 "::"
        TypeName@98..104
          Ident@98..104 "float8"
  Ascii41@104..105 ")"
  Ascii59@105..106 ";"

