crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, a, b)\n   VALUES ('d', 11, 'fumble'::text);"
---
InsertStmt@0..69
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "b"
  Ascii41@31..32 ")"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  SelectStmt@36..67
    Values@36..42 "VALUES"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..67
      AConst@44..47
        Sconst@44..47 "'d'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..51
        Iconst@49..51 "11"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      TypeCast@53..67
        AConst@53..61
          Sconst@53..61 "'fumble'"
        Typecast@61..63 "::"
        TypeName@63..67
          TextP@63..67 "text"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

